Added speaker page, deleted travel and visa page for /zh.
Some other minor changes

--- a/src/components/FooterLanding.astro
+++ b/src/components/FooterLanding.astro
@@ -5,8 +5,8 @@ import Logo from "./Logo.astro"
 
 const firstColumnLinks = [
   {
-    text: "Location",
-    link: "/#venue",
+    text: "Speakers",
+    link: "/speakers",
   },
   {
     text: "Tracks",
@@ -19,7 +19,11 @@ const firstColumnLinks = [
   {
     text: "Co-located Event",
     link: "/#rust-global",
-  }
+  },
+  {
+    text: "Venue",
+    link: "/venue",
+  },
 ]
 
 const secondColumnLinks = [
