--- a/src/components/FooterLandingZh.astro
+++ b/src/components/FooterLandingZh.astro
@@ -5,8 +5,8 @@ import Logo from "./Logo.astro"
 
 const firstColumnLinks = [
   {
-    text: "会议地点",
-    link: "/zh/#venue",
+    text: "讲师",
+    link: "/zh/speakers",
   },
   {
     text: "主题",
@@ -19,7 +19,11 @@ const firstColumnLinks = [
   {
     text: "同期活动",
     link: "/zh/#rust-global",
-  }
+  },
+  {
+    text: "会议地点",
+    link: "/zh/venue",
+  },
 ]
 
 const secondColumnLinks = [
