--- a/src/pages/zh/faq.astro
+++ b/src/pages/zh/faq.astro
@@ -7,8 +7,8 @@ import FAQ from "components/FAQZh.astro";
 ---
 
 <Layout
-  title="常见问题 – GOSIM 杭州 2025"
-  description="GOSIM 杭州 2025是开源AI项目、开发者、研究人员和行业赞助商的聚会，旨在分享知识、相互学习和合作。"
+  title="常见问题 – GOSIM Hangzhou 2025"
+  description="GOSIM Hangzhou 2025是开源AI项目、开发者、研究人员和行业赞助商的聚会，旨在分享知识、相互学习和合作。"
   navBackground="light"
   pageTransitionName="常见问题"
 >
