--- a/src/pages/zh/index.astro
+++ b/src/pages/zh/index.astro
@@ -28,8 +28,8 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
 ---
 
 <Layout
-  title="GOSIM 杭州 2025"
-  description="GOSIM 杭州。即将到来。"
+  title="GOSIM Hangzhou 2025"
+  description="GOSIM Hangzhou 2025。即将到来。"
   navDarkMode={true}
   navBackground="header-home"
   pageTransitionName="Home"
@@ -146,7 +146,7 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
     title="提案征集 Call For Proposals"
     text="我们正在寻找大胆的想法和新鲜的声音来塑造未来。如果您对前沿技术、新兴趋势或变革性实践有见解，我们希望听到您的声音。提交演讲提案，加入由推动边界的创新者、思想领袖和变革者组成的阵容。"
     image={Proposals}
-    imageAlt="GOSIM 杭州"
+    imageAlt="GOSIM Hangzhou 2025"
     dataBgSection="light"
     dataThemeSection="light"
     ctaButton={{
