--- a/src/pages/zh/tickets.astro
+++ b/src/pages/zh/tickets.astro
@@ -12,8 +12,8 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
 ---
 
 <Layout
-  title="GOSIM 杭州 2025"
-  description="GOSIM 杭州。即将到来。"
+  title="GOSIM Hangzhou 2025"
+  description="GOSIM Hangzhou 2025。即将到来。"
   navDarkMode={true}
   navBackground="header-home"
   pageTransitionName="Home"
