--- a/src/pages/venue.astro
+++ b/src/pages/venue.astro
@@ -1,22 +1,29 @@
 ---
-import VenueInfo from '../components/VenueInfo.astro';
-import Layout from 'layouts/LayoutLanding.astro';
+import VenueInfo from "../components/VenueDetails.astro";
+import Layout from "layouts/LayoutLanding.astro";
+import HeroText from "components/HeroText.astro";
+import GetTickets from "components/GetTickets.astro";
 ---
 
-<Layout title="Venue – GOSIM Hangzhou 2025" description="Information about the venue for GOSIM Hangzhou 2025">
-  <section
-    class="section speaker-detail-header"
-    data-theme-section="light"
-    data-bg-section="light"
-  >
-    <div class="container">
-      <h1>Venue</h1>
-      <VenueInfo
-        subtitle = "Hangzhou Platinum Hanjue Hotel";
-        title = "杭州白金汉爵酒店";
-        location = "浙江省杭州市西湖区珊瑚沙东路9号 (No. 9, Shanshadong Road, Xihu District, Hangzhou City, Zhejiang Province)";
-        image="/images/homepage/杭州白金汉爵酒店.jpg"
-      />
-    </div>
+<Layout
+  title="Venue – GOSIM Hangzhou 2025"
+  description="Information about the venue for GOSIM Hangzhou 2025"
+  navBackground="light"
+>
+  <HeroText title="Venue" />
+
+  <section class="section" data-theme-section="light" data-bg-section="light">
+    <VenueInfo />
   </section>
+  <GetTickets
+    title="Grab your GOSIM Hangzhou ticket"
+    location="Hangzhou, China"
+    date="September 13-14, 2025"
+    text="Secure your spot today at GOSIM Hangzhou 2025. Collaborate with innovators, engage with industry pioneers, and be part of shaping the future of open-source technology."
+    ctaButton={{
+      text: "Get tickets",
+      link: "/tickets",
+      openInNewTab: false,
+    }}
+  />
 </Layout>
