--- a/src/pages/venue.astro
+++ b/src/pages/venue.astro
@@ -8,7 +8,7 @@ import GetTickets from "components/GetTickets.astro";
 <Layout
   title="Venue – GOSIM Hangzhou 2025"
   description="Information about the venue for GOSIM Hangzhou 2025"
-  navBackground="light"
+  navBackground="lightgray"
 >
   <HeroText title="Venue" />
 
