Added workshop page for both en and zh. Updated speakers and workshops json

--- a/src/components/HeaderLandingZh.astro
+++ b/src/components/HeaderLandingZh.astro
@@ -12,6 +12,10 @@ const links = [
     link: "/zh/speakers",
   },
   {
+    text: "工作坊",
+    link: "/zh/workshops",
+  },
+  {
     text: "主题",
     link: "/zh/#tracks",
   },
