--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -260,7 +260,7 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
     title="Previous Events"
     events={[
       {
-        title: "GOSIM Paris",
+        title: "GOSIM AI Paris",
         date: "May 6-7, 2025",
         description:
           "Over 1000 attendees and luminaries delved into the multifaceted development of AI for our 2-day GOSIM Paris event in the city of lights.",
@@ -268,7 +268,7 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
         link: "https://paris2025.gosim.org/",
       },
       {
-        title: "GOSIM Beijing",
+        title: "GOSIM China (Beijing)",
         date: "October 17-18, 2024",
         description:
           "Attracted more than 1700 attendees, GOSIM Beijing is by far the largest GOSIM event ever in the historical capital of China.",
@@ -276,7 +276,7 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
         link: "https://china2024.gosim.org/",
       },
       {
-        title: "GOSIM Delft",
+        title: "GOSIM Europe (Delft)",
         date: "June 6-7, 2024",
         description:
           "GOSIM Delft was a two-day event with 3 tracks that brought together 1200 attendees from not only the Netherlands, but all around the world.",
@@ -284,7 +284,7 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
         link: "https://europe2024.gosim.org/",
       },
       {
-        title: "GOSIM Shanghai",
+        title: "GOSIM Conference (Shanghai)",
         date: "September 23-24, 2023",
         description:
           "Where everything started, GOSIM conference and workshop focused on championing and enhancing open-source contributions.",
