--- a/src/pages/zh/index.astro
+++ b/src/pages/zh/index.astro
@@ -112,23 +112,23 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
     title="5大前沿主题"
     list={[
       {
-        title: "AI Models & Infra（AI模型与基础设施）",
+        title: "AI 模型与基础设施",
         text: `基础模型、边缘推理、生成式AI、AI训练工具等。`,
       },
       {
-        title: "Embodied AI（实体AI）",
+        title: "具身智能",
         text: `在现实世界中应用AI，从人形机器人到自主系统。`,
       },
       {
-        title: "Agentic Web（互联智能体）",
+        title: "智能体网络",
         text: `去中心化应用、身份识别、增强隐私技术和协作平台。`,
       },
       {
-        title: "Apps & Agents（应用与智能体）",
+        title: "应用与智能体",
         text: `跨平台和AI辅助应用开发、Rust GUI应用、WebAssembly和超级应用生态系统。`,
       },
       {
-        title: "AI Next（AI未来）",
+        title: "下一代 AI",
         text: `AI赋能用例、AI设备、人机交互界面、AI平台和AI治理。`,
       },
       // {
@@ -244,33 +244,33 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
     title="往届活动"
     events={[
       {
-        title: "GOSIM 巴黎",
+        title: "GOSIM AI Paris（法国巴黎）",
         date: "2025年5月6-7日",
         description:
-          "超过1000名与会者和行业精英在光之城参加了为期两天的GOSIM巴黎活动，深入探讨了AI的多方面发展。",
+          "超过1000名与会者和行业精英在光之城参加了为期两天的GOSIM AI Paris活动，深入探讨了AI的多方面发展。",
         image: GosimParis,
         link: "https://paris2025.gosim.org/",
       },
       {
-        title: "GOSIM 北京",
+        title: "GOSIM China（中国北京）",
         date: "2024年10月17-18日",
         description:
-          "吸引了超过1700名与会者，GOSIM北京是迄今为止在中国历史悠久的首都举办的规模最大的GOSIM活动。",
+          "吸引了超过1700名与会者，GOSIM China是迄今为止在中国历史悠久的首都举办的规模最大的GOSIM活动。",
         image: GosimBeijing,
         link: "https://china2024.gosim.org/",
       },
       {
-        title: "GOSIM 代尔夫特",
+        title: "GOSIM Europe（荷兰代尔夫特）",
         date: "2024年6月6-7日",
         description:
-          "GOSIM代尔夫特是一个为期两天、设有3个主题的活动，吸引了来自荷兰及世界各地的1200名与会者。",
+          "GOSIM Europe是一个为期两天、设有3个主题的活动，吸引了来自荷兰及世界各地的1200名与会者。",
         image: GosimDelft,
         link: "https://europe2024.gosim.org/",
       },
       {
-        title: "GOSIM 上海",
+        title: "GOSIM Conference（中国上海）",
         date: "2023年9月23-24日",
-        description: "一切的起点，GOSIM会议和工作坊专注于倡导和增强开源贡献。",
+        description: "一切的起点，GOSIM Conference和Workshop专注于倡导和增强开源贡献。",
         image: GosimShanghai,
         link: "https://conference2023.gosim.org/",
       },
