--- a/src/pages/zh/speakers/index.astro
+++ b/src/pages/zh/speakers/index.astro
@@ -3,7 +3,7 @@
 import Layout from "layouts/LayoutLandingZh.astro";
 import GetTickets from "components/GetTickets.astro";
 import HeroText from "components/HeroText.astro";
-import AllSpeakers from "components/Speakers.astro";
+import AllSpeakers from "components/SpeakersZh.astro";
 ---
 
 <Layout
