--- a/src/components/HeaderLanding.astro
+++ b/src/components/HeaderLanding.astro
@@ -15,6 +15,10 @@ const links = [
     text: "Speakers",
     link: "/speakers",
   },
+    {
+    text: "Workshops",
+    link: "/workshops",
+  },
   {
     text: "Tracks",
     link: "/#tracks",
