--- a/src/pages/general-travel.astro
+++ b/src/pages/general-travel.astro
@@ -60,7 +60,7 @@ const mapMarkers = [
       <br>
         Hangzhou is the capital of Zhejiang Province in Eastern China, located about 170 km (105 miles) southwest of Shanghai. It's a major economic and cultural hub, renowned for its natural beauty, particularly West Lake. 
       <br><br>
-        Hangzhou has a limited number of international flights, but it is well-connected to major cities in China and Asia. The city is easily accessible by high-speed train from Shanghai, Beijing, and other major international airports.
+        Hangzhou has a limited number of international flights, but it is well-connected to major cities in China and Asia. The city is easily accessible by high-speed train from Shanghai (45 min), Beijing (4.5 hr), and other major international airports.
 
     </div>
     <br>
@@ -70,7 +70,7 @@ const mapMarkers = [
     <br>
     You can order a DIDI (Chinese Uber) from Alipay or WeChat mini app, type in "杭州白金汉爵酒店" (Hangzhou Platinum Hanjue Hotel) to get a ride. 
     <br><br>
-    Hangzhou also has good subway and bus systems. You can use the Transit Feature in Alipay and scan QR code at the fare gate. 
+    Hangzhou also has good subway and bus systems. You can use the Transit Feature in Alipay and present your transit QR code at the fare gate scannerwhen riding subways and buses. 
 
     <br><br>
     <h3>To Venue From ...</h3>
