--- a/src/components/Workshops.astro
+++ b/src/components/Workshops.astro
@@ -3,7 +3,7 @@ import { Picture } from "astro:assets"
 import type { ImageMetadata } from "astro"
 
 // Import the workshops data
-import workshopsData from "json/workshops.json"
+import workshopsData from "json/Workshops.json"
 
 // Filter speakers to only include those where draft is false and id is not "tbd"
 const filteredSpeakers = workshopsData.speakers.filter(
