Updated speakers, added co-located events page

--- a/src/components/HeaderLanding.astro
+++ b/src/components/HeaderLanding.astro
@@ -29,7 +29,18 @@ const links = [
   },
   {
     text: "Co-located Event",
-    link: "/#rust-global",
+    subLinks: [
+      {
+        text: "RustGlobal & RustChinaConf",
+        link: "https://rustcc.cn/2025conf/",
+        openInNewTab: true,
+      },
+      {
+        text: "Code Alert Hackathon",
+        link: "https://hackathon.mofa.ai",
+        openInNewTab: true,
+      },
+    ],
   },
   {
     text: "Venue, Travel, & Visa",
