--- a/src/components/HeaderLandingZh.astro
+++ b/src/components/HeaderLandingZh.astro
@@ -25,7 +25,18 @@ const links = [
   },
   {
     text: "同期活动",
-    link: "/zh/#rust-global",
+    subLinks: [
+      {
+        text: "RustGlobal & RustChinaConf",
+        link: "https://rustcc.cn/2025conf/",
+        openInNewTab: true,
+      },
+      {
+        text: "Code Alert 黑客松大赛",
+        link: "https://hackathon.mofa.ai",
+        openInNewTab: true,
+      },
+    ],
   },
   {
     text: "会议地点",
