--- a/src/pages/chinese-visa.astro
+++ b/src/pages/chinese-visa.astro
@@ -30,7 +30,7 @@ import VisaTraditional from "images/subpages/visa-traditional.png";
         id="visa-free-entry"
         title="Visa Free Entry"
         text="Citizens from 74 countries, including most EU nations, Australia, New Zealand, and several Latin American countries, can now enter China visa-free for up to 30 days. This applies to tourism, business, visiting family/friends, or short conferences."
-        validExample1="Japan → China → Japan"
+        validExample1="France → China → France"
         validExample2="Singapore → China → Singapore"
         invalidExample1="USA → China → USA"
         invalidExample2="UK → China → UK"
