Updated co-located events section

--- a/src/components/HeaderLandingZh.astro
+++ b/src/components/HeaderLandingZh.astro
@@ -36,6 +36,11 @@ const links = [
         link: "https://hackathon.mofa.ai",
         openInNewTab: true,
       },
+      // {
+      //   text: "AIOS 黑客松大赛",
+      //   link: "https://mofa.ai/super-agent-hackathon/",
+      //   openInNewTab: true,
+      // },
     ],
   },
   {
