--- a/src/pages/zh/workshops/index.astro
+++ b/src/pages/zh/workshops/index.astro
@@ -21,10 +21,10 @@ import AllWorkshops from "components/WorkshopsZh.astro";
   <AllWorkshops />
 
   <GetTickets
-    title="获取您的GOSIM杭州门票"
-    location="中国，杭州"
+    title="获取您的 GOSIM Hangzhou 2025 门票"
+    location="浙江，杭州"
     date="2025年9月13-14日"
-    text="立即确保您在GOSIM杭州2025的席位。与创新者合作，与行业先驱互动，成为塑造开源技术未来的一部分。"
+    text="立即确保您在 GOSIM Hangzhou 2025 的席位。与创新者合作，与行业先驱互动，成为塑造开源技术未来的一部分。"
     ctaButton={{
       text: "Get tickets",
       link: "/tickets",
