--- a/src/components/HeaderLanding.astro
+++ b/src/components/HeaderLanding.astro
@@ -40,6 +40,11 @@ const links = [
         link: "https://hackathon.mofa.ai",
         openInNewTab: true,
       },
+      // {
+      //   text: "AIOS Hackathon",
+      //   link: "https://mofa.ai/super-agent-hackathon/",
+      //   openInNewTab: true,
+      // },
     ],
   },
   {
