--- a/src/pages/zh/schedule.astro
+++ b/src/pages/zh/schedule.astro
@@ -18,7 +18,7 @@ import Schedules from "components/Schedules.astro";
 
   <GetTickets
     title="获取您的GOSIM Hangzhou门票"
-    location="中国杭州"
+    location="浙江 杭州"
     date="2025年9月13-14日"
     text="立即确保您在GOSIM Hangzhou 2025的席位。与创新者合作，与行业先驱交流，成为塑造开源技术未来的一部分。"
     ctaButton={{
