--- a/src/pages/zh/index.astro
+++ b/src/pages/zh/index.astro
@@ -113,7 +113,7 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
     title="5大前沿主题"
     list={[
       {
-        title: "AI 模型与基础设施",
+        title: "AI 模型 × 基础设施",
         text: `基础模型、边缘推理、生成式AI、AI训练工具等。`,
       },
       {
@@ -125,7 +125,7 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
         text: `去中心化应用、身份识别、增强隐私技术和协作平台。`,
       },
       {
-        title: "应用与智能体",
+        title: "应用 × 智能体",
         text: `跨平台和AI辅助应用开发、Rust GUI应用、WebAssembly和超级应用生态系统。`,
       },
       {
