Added co-located events, edited speakers json

--- a/src/components/HeaderLanding.astro
+++ b/src/components/HeaderLanding.astro
@@ -36,6 +36,16 @@ const links = [
         openInNewTab: true,
       },
       {
+        text: "AI Vision Forum",
+        link: "https://forum.gosim.org/en/",
+        openInNewTab: true,
+      },
+      {
+        text: "Open for SDG Conference",
+        link: "https://opensdg.gosim.org/en/",
+        openInNewTab: true,
+      },
+      {
         text: "Code Alert Hackathon",
         link: "https://hackathon.mofa.ai",
         openInNewTab: true,
