--- a/src/components/HeaderLandingZh.astro
+++ b/src/components/HeaderLandingZh.astro
@@ -32,10 +32,21 @@ const links = [
         openInNewTab: true,
       },
       {
+        text: "人工智能愿景论坛",
+        link: "https://forum.gosim.org",
+        openInNewTab: true,
+      },
+      {
+        text: "开放共创 · 可持续发展大会",
+        link: "https://opensdg.gosim.org/cn/",
+        openInNewTab: true,
+      },
+      {
         text: "Code Alert 黑客松大赛",
         link: "https://hackathon.mofa.ai",
         openInNewTab: true,
       },
+      
       // {
       //   text: "AIOS 黑客松大赛",
       //   link: "https://mofa.ai/super-agent-hackathon/",
