--- a/src/pages/zh/venue.astro
+++ b/src/pages/zh/venue.astro
@@ -18,7 +18,7 @@ import GetTickets from "components/GetTickets.astro";
 
   <GetTickets
     title="获取您的 GOSIM Hangzhou 2025 门票"
-    location="杭州, 浙江"
+    location="浙江 杭州"
     date="2025年9月13-14日"
     text="立即预定您在 GOSIM Hangzhou 2025 的席位。与创新者合作，与行业先驱交流，并成为塑造开源技术未来的一部分。"
     ctaButton={{
