--- a/src/components/WorkshopsZh.astro
+++ b/src/components/WorkshopsZh.astro
@@ -82,7 +82,7 @@ const images = import.meta.glob<{ default: ImageMetadata }>(
             data-filter-category={speaker.tag}
           >
             <a
-              href={`/speakers/${speaker.id}/`}
+              href={`/zh/speakers/${speaker.id}/`}
               class="single-speakers-card"
               data-modal-card-status="not-active"
               data-modal-card-id={speaker.id}
